dastd_headers += files([
	'args.hpp',
	'base64.hpp',
	'bit_manip.hpp',
	'char32parametric.hpp',
	'char32string.hpp',
	'container.hpp',
	'defs.hpp',
	'endian_aware.hpp',
	'exception.hpp',
	'float.hpp',
	'flooder_ch32.hpp',
	'flooder_ch32_conststr.hpp',
	'flooder_ch32_relay.hpp',
	'flooder_ch32_set.hpp',
	'fmt.hpp',
	'fmt32.hpp',
	'fmt32__class.hpp',
	'fmt32__inline.hpp',
	'fmt_bin.hpp',
	'fmt_string.hpp',
	'fmt_string_f.hpp',
	'hash.hpp',
	'hash_crc32.hpp',
	'istream_membuf.hpp',
	'json_encoder.hpp',
	'json_tokenizer.hpp',
	'marshal.hpp',
	'marshal_bin.hpp',
	'marshal_dec.hpp',
	'marshal_dec_bin.hpp',
	'marshal_dec_bin__inline.hpp',
	'marshal_dec_json.hpp',
	'marshal_enc.hpp',
	'marshal_enc_bin.hpp',
	'marshal_enc_json.hpp',
	'marshal_json.hpp',
	'meson.build',
	'multinum.hpp',
	'ostream_basic.hpp',
	'ostream_broadcast.hpp',
	'ostream_charbuf.hpp',
	'ostream_indent.hpp',
	'ostream_log.hpp',
	'ostream_string.hpp',
	'ostream_utf8.hpp',
	'ostream_utf8__class.hpp',
	'ostream_utf8__inline.hpp',
	'random.hpp',
	'rtti.hpp',
	'sink_ch32.hpp',
	'sink_ch32_indent.hpp',
	'sink_ch32_ostream.hpp',
	'sink_ch32__class.hpp',
	'sink_ch32__inline.hpp',
	'source.hpp',
	'source_membuf.hpp',
	'source_string_or_vector.hpp',
	'source_with_peek.hpp',
	'spinlock.hpp',
	'string_or_vector.hpp',
	'string_tools.hpp',
	'strtointegral.hpp',
	'sysrecog.hpp',
	'time.hpp',
	'utf8.hpp',
	'utf16.hpp',
	'wordwrappable.hpp'
])

